--- a/pom.xml
+++ b/pom.xml
@@ -386,6 +386,11 @@
                 <scope>provided</scope>
                 <version>${javax.servlet.api.version}</version>
             </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>${javax.javax.servlet.api.version}</version>
+            </dependency>
 
             <!--carbon automation framework-->
             <dependency>
@@ -665,6 +670,7 @@
         <paho.mqtt.version>0.4.0</paho.mqtt.version>
         <apache.kafka.version>0.8.1</apache.kafka.version>
         <javax.servlet.api.version>2.5</javax.servlet.api.version>
+        <javax.javax.servlet.api.version>3.1.0</javax.javax.servlet.api.version>
         <shindig.version>2.5.2</shindig.version>
         <h2.version>1.2.147</h2.version>
         <jetty.version>9.2.7.v20150116</jetty.version>
