--- a/modules/samples/extensions/geo-event-fuser/pom.xml
+++ b/modules/samples/extensions/geo-event-fuser/pom.xml
@@ -3,13 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.wso2.siddhi</groupId>
-        <artifactId>siddhi-extensions</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <groupId>org.wso2.cep</groupId>
+        <artifactId>cep-samples-parent</artifactId>
+        <version>4.0.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>geo-event-fuser</artifactId>
+    <version>${siddhi.version}</version>
     <packaging>bundle</packaging>
     <name>Siddhi Extension - Geo Event Fuser</name>
 
