--- a/pom.xml
+++ b/pom.xml
@@ -376,6 +376,12 @@
                 <version>${log4j.wso2.version}</version>
             </dependency>
             <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <scope>test</scope>
+                <version>${junit.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>commons-logging</groupId>
                 <artifactId>commons-logging</artifactId>
                 <version>${version.commons.logging}</version>
@@ -635,7 +641,7 @@
         <carbon.multitenancy.version>4.4.0</carbon.multitenancy.version>
         <carbon.governance.version>4.4.1</carbon.governance.version>
 
-        <!--<siddhi.version>3.</siddhi.version>-->
+        <siddhi.version>3.0.0-SNAPSHOT</siddhi.version>
         <cep.version>4.0.0-SNAPSHOT</cep.version>
         <carbon.event-processing.version>2.0.4-SNAPSHOT</carbon.event-processing.version>
 
@@ -675,6 +681,7 @@
         <h2.version>1.2.147</h2.version>
         <jetty.version>9.2.7.v20150116</jetty.version>
         <javax.websocket.api.version>1.0</javax.websocket.api.version>
+        <junit.version>4.10</junit.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.scm.id>my-scm-server</project.scm.id>
