--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,7 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
         <groupId>org.wso2</groupId>
@@ -27,7 +26,7 @@
     <groupId>org.wso2.cep</groupId>
     <artifactId>wso2cep-parent</artifactId>
     <packaging>pom</packaging>
-    <version>4.0.0-SNAPSHOT</version>
+    <version>4.0.0-alpha</version>
     <name>WSO2 CEP - Parent</name>
     <url>http://wso2.com/products/complex-event-processor/</url>
     <description>WSO2 Complex Event Processor</description>
@@ -483,7 +482,7 @@
         <url>https://github.com/wso2/product-cep.git</url>
         <developerConnection>scm:git:https://github.com/wso2/product-cep.git</developerConnection>
         <connection>scm:git:https://github.com/wso2/product-cep.git</connection>
-        <tag>HEAD</tag>
+        <tag>v4.0.0-alpha</tag>
     </scm>
     <!--build>
         <plugins>
@@ -642,7 +641,7 @@
         <carbon.governance.version>4.4.1</carbon.governance.version>
 
         <siddhi.version>3.0.0-alpha</siddhi.version>
-        <cep.version>4.0.0-SNAPSHOT</cep.version>
+        <cep.version>4.0.0-alpha</cep.version>
         <carbon.event-processing.version>2.0.4-alpha</carbon.event-processing.version>
 
         <!-- Carbon kernel version-->
