--- a/modules/samples/consumers/jms/pom.xml
+++ b/modules/samples/consumers/jms/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>cep-samples-consumers</artifactId>
         <groupId>org.wso2.cep</groupId>
-        <version>4.0.0-alpha</version>
+        <version>4.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
