--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
         <artifactId>wso2cep-parent</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>4.0.0-alpha</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
