--- a/modules/samples/producers/websocket/pom.xml
+++ b/modules/samples/producers/websocket/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
         <artifactId>cep-samples-producers</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>4.0.0-alpha</version>
     </parent>
 
     <artifactId>websocket-publisher</artifactId>
