--- a/pom.xml
+++ b/pom.xml
@@ -633,16 +633,16 @@
         <jaggery.modules.version>1.3.0</jaggery.modules.version>
         <carbon.deployment.version>4.4.0</carbon.deployment.version>
         <carbon.commons.version>4.4.0</carbon.commons.version>
-        <carbon.analytics-common.version>2.0.0-alpha</carbon.analytics-common.version>
+        <carbon.analytics-common.version>2.0.0-SNAPSHOT</carbon.analytics-common.version>
         <carbon.identity.version>4.4.0</carbon.identity.version>
         <carbon.registry.version>4.4.1</carbon.registry.version>
         <!--<carbon.storagemgt.version>4.3.1-SNAPSHOT</carbon.storagemgt.version>-->
         <carbon.multitenancy.version>4.4.0</carbon.multitenancy.version>
         <carbon.governance.version>4.4.1</carbon.governance.version>
 
-        <siddhi.version>3.0.0-alpha</siddhi.version>
+        <siddhi.version>3.0.0-SNAPSHOT</siddhi.version>
         <cep.version>4.0.0-SNAPSHOT</cep.version>
-        <carbon.event-processing.version>2.0.4-alpha</carbon.event-processing.version>
+        <carbon.event-processing.version>2.0.4-SNAPSHOT</carbon.event-processing.version>
 
         <!-- Carbon kernel version-->
         <carbon.kernel.version>4.4.0</carbon.kernel.version>
