--- a/modules/samples/extensions/geo-event-fuser/pom.xml
+++ b/modules/samples/extensions/geo-event-fuser/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>geo-event-fuser</artifactId>
-    <version>3.0.0-alpha</version>
+    <version>${siddhi.version}</version>
     <packaging>bundle</packaging>
     <name>Siddhi Extension - Geo Event Fuser</name>
 
@@ -50,8 +50,6 @@
                         <Import-Package>
                             *;resolution:=optional
                         </Import-Package>
-                        <Embed-Transitive>true</Embed-Transitive>
-                        <Embed-Dependency>scope=runtime;inline=true</Embed-Dependency>
                         <DynamicImport-Package>*</DynamicImport-Package>
                     </instructions>
                 </configuration>
