--- a/modules/samples/extensions/geo-event-notifier/pom.xml
+++ b/modules/samples/extensions/geo-event-notifier/pom.xml
@@ -29,7 +29,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>geo-event-notifier</artifactId>
-    <version>3.0.0-alpha</version>
+    <version>${siddhi.version}</version>
     <packaging>bundle</packaging>
     <name>Siddhi Extension - Geo Event Notifier</name>
 
@@ -66,8 +66,6 @@
                         <Import-Package>
                             *;resolution:=optional
                         </Import-Package>
-                        <Embed-Transitive>true</Embed-Transitive>
-                        <Embed-Dependency>scope=runtime;inline=true</Embed-Dependency>
                         <DynamicImport-Package>*</DynamicImport-Package>
                     </instructions>
                 </configuration>
