Performance test producer completed for sensor stream

--- a/modules/samples/producers/performance-test/src/main/resources/log4j.properties
+++ b/modules/samples/producers/performance-test/src/main/resources/log4j.properties
@@ -14,44 +14,21 @@
 # limitations under the License.
 #
 
-#
-# This is the log4j configuration file used by WSO2 Carbon
-#
-# IMPORTANT : Please do not remove or change the names of any
-# of the Appenders defined here. The layout pattern & log file
-# can be changed using the WSO2 Carbon Management Console, and those
-# settings will override the settings in this file.
-#
 
-log4j.rootLogger=INFO,QuietAppender,LoudAppender
+# For the general syntax of property based configuration files see the
+# documenation of org.apache.log4j.PropertyConfigurator.
 
-log4j.logger.org.apache=INFO
-log4j.logger.org.wso2=TRACE
-log4j.logger.org.apache.directory.server.core=ERROR
+# The root category uses the appender called A1. Since no priority is
+# specified, the root category assumes the default priority for root
+# which is DEBUG in log4j. The root category is the only category that
+# has a default priority. All other categories need not be assigned a
+# priority in which case they inherit their priority from the
+# hierarchy.
 
-# Specification of Handler used by Console Logger
-handlers=java.util.logging.ConsoleHandler
+log4j.rootLogger=debug, console
+#log4j.rootLogger=info, console
 
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%m%n
-
-log4j.appender.QuietAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.QuietAppender.File=wso2cep-sample-summary.log
-log4j.appender.QuietAppender.MaxFileSize=10MB
-log4j.appender.QuietAppender.MaxBackupIndex=1
-log4j.appender.QuietAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.QuietAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
-log4j.appender.QuietAppender.Threshold=INFO
-
-log4j.appender.LoudAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.LoudAppender.File=wso2cep-sample-out.log
-log4j.appender.LoudAppender.MaxFileSize=100MB
-log4j.appender.LoudAppender.MaxBackupIndex=1
-log4j.appender.LoudAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.LoudAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
-log4j.appender.LoudAppender.Threshold=TRACE
-log4j.appender.LoudAppender.Append=false
-
-# Replacing default INFO level with SEVERE
-java.util.logging.ConsoleHandler.level=SEVERE
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+#log4j.appender.console.layout.ConversionPattern=[%t] %-5p %c %x - %m%n
+log4j.appender.console.layout.ConversionPattern=[%t] %-5p %c %x - %m%n
