--- a/modules/samples/producers/performance-test/pom.xml
+++ b/modules/samples/producers/performance-test/pom.xml
@@ -23,12 +23,10 @@
         <artifactId>cep-samples-producers</artifactId>
         <version>4.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>performance-test-client</artifactId>
 
-    <packaging>jar</packaging>
-    <url>http://wso2.org/projects/cep/java</url>
-    <name>WSO2 CEP - Samples - Performance Test Clients</name>
-    <description>WSO2 Complex Event Processor Samples</description>
+    <artifactId>performance-test</artifactId>
+    <name>WSO2 CEP - Producer - Performance Test</name>
+
 
     <dependencies>
         <dependency>
@@ -43,51 +41,16 @@
             <groupId>org.wso2.carbon.analytics-common</groupId>
             <artifactId>org.wso2.carbon.databridge.commons.thrift</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.analytics-common</groupId>
+            <artifactId>org.wso2.carbon.databridge.commons.binary</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.analytics-common</groupId>
+            <artifactId>org.wso2.carbon.databridge.commons</artifactId>
+            <version>1.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>create-dep-jar</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        <configuration>
-                            <archive>
-                                <manifest>
-                                    <mainClass>org.wso2.carbon.cep.sample.client.PerfTestClient</mainClass>
-                                    <addClasspath>true</addClasspath>
-                                </manifest>
-                            </archive>
-                            <descriptorRefs>
-                                <descriptorRef>jar-with-dependencies</descriptorRef>
-                            </descriptorRefs>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-
-        </plugins>
-    </build>
-
-
-    <licenses>
-        <license>
-            <name>Apache License Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
-        </license>
-    </licenses>
-
-    <organization>
-        <name>WSO2 Inc</name>
-        <url>http://wso2.com</url>
-    </organization>
 
 
 </project>
