--- a/modules/samples/producers/pom.xml
+++ b/modules/samples/producers/pom.xml
@@ -39,6 +39,8 @@
         <module>kafka</module>
         <module>soap</module>
         <module>websocket</module>
+        <module>performance-test</module>
+
     </modules>
 
 </project>
