--- a/modules/samples/producers/wso2-event-performance/build.xml
+++ b/modules/samples/producers/wso2-event-performance/build.xml
@@ -28,8 +28,10 @@
     <property name="port" value="7611"/>
     <property name="username" value="admin"/>
     <property name="password" value="admin"/>
-    <property name="eventCount" value="1000"/>
-    <property name="elapsedCount" value="100"/>
+    <property name="eventCount" value="100000"/>
+    <property name="elapsedCount" value="10000"/>
+    <property name="warmUpCount" value="10000"/>
+
 
     <path id="javac.classpath">
         <pathelement path="${class.dir}"/>
@@ -73,7 +75,9 @@
     </target>
 
     <target name="run" depends="compile">
-        <echo>Configure optionally use -DeventCount=xxxx -DelapsedCount=xxxx -Dprotocol='thrift/binary' -Dhost=xxxx -Dport=xxxx -Dusername=xxxx -Dpassword=xxxx</echo>
+        <echo>Configure optionally use -DeventCount=xxxx -DelapsedCount=xxxx -DwarmUpCount=xxxx -Dprotocol='thrift/binary' -Dhost=xxxx
+            -Dport=xxxx -Dusername=xxxx -Dpassword=xxxx
+        </echo>
         <java classname="${main-class}"
               classpathref="javac.classpath" fork="true">
             <arg value="${protocol}"/>
@@ -83,6 +87,7 @@
             <arg value="${password}"/>
             <arg value="${eventCount}"/>
             <arg value="${elapsedCount}"/>
+            <arg value="${warmUpCount}"/>
         </java>
     </target>
 
