Adding http-performance artifacts

--- a/modules/samples/producers/pom.xml
+++ b/modules/samples/producers/pom.xml
@@ -39,6 +39,7 @@
         <module>kafka</module>
         <module>soap</module>
         <module>websocket</module>
+        <module>http-performance</module>
     </modules>
 
 </project>
