--- a/pom.xml
+++ b/pom.xml
@@ -634,6 +634,7 @@
         <carbon.deployment.version>4.4.0</carbon.deployment.version>
         <carbon.commons.version>4.4.0</carbon.commons.version>
         <carbon.analytics-common.version>2.0.0-SNAPSHOT</carbon.analytics-common.version>
+        <carbon.dashboards.version>1.0.1-SNAPSHOT</carbon.dashboards.version>
         <carbon.identity.version>4.4.0</carbon.identity.version>
         <carbon.registry.version>4.4.1</carbon.registry.version>
         <!--<carbon.storagemgt.version>4.3.1-SNAPSHOT</carbon.storagemgt.version>-->
