--- a/pom.xml
+++ b/pom.xml
@@ -640,6 +640,7 @@
         <!--<carbon.storagemgt.version>4.3.1-SNAPSHOT</carbon.storagemgt.version>-->
         <carbon.multitenancy.version>4.4.0</carbon.multitenancy.version>
         <carbon.governance.version>4.4.1</carbon.governance.version>
+        <carbon.ml.version>1.0.1-SNAPSHOT</carbon.ml.version>
 
         <siddhi.version>3.0.0-SNAPSHOT</siddhi.version>
         <cep.version>4.0.0-SNAPSHOT</cep.version>
