Adding kafka-performance module

--- a/modules/samples/producers/pom.xml
+++ b/modules/samples/producers/pom.xml
@@ -41,6 +41,7 @@
         <module>websocket</module>
         <module>wso2-event-performance</module>
         <module>http-performance</module>
+        <module>kafka-performance</module>
     </modules>
 
 </project>
