--- a/modules/samples/producers/wso2-event-performance/build.xml
+++ b/modules/samples/producers/wso2-event-performance/build.xml
@@ -31,6 +31,7 @@
     <property name="eventCount" value="100000"/>
     <property name="elapsedCount" value="10000"/>
     <property name="warmUpCount" value="10000"/>
+    <property name="calcType" value="throughput"/>
 
 
     <path id="javac.classpath">
@@ -76,7 +77,7 @@
 
     <target name="run" depends="compile">
         <echo>Configure optionally use -DeventCount=xxxx -DelapsedCount=xxxx -DwarmUpCount=xxxx -Dprotocol='thrift/binary' -Dhost=xxxx
-            -Dport=xxxx -Dusername=xxxx -Dpassword=xxxx
+            -Dport=xxxx -Dusername=xxxx -Dpassword=xxxx -DcalcType='throughput/latency'
         </echo>
         <java classname="${main-class}"
               classpathref="javac.classpath" fork="true">
@@ -88,6 +89,7 @@
             <arg value="${eventCount}"/>
             <arg value="${elapsedCount}"/>
             <arg value="${warmUpCount}"/>
+            <arg value="${calcType}"/>
             <jvmarg value="-Xmx1024m"/>
             <jvmarg value="-Xms512m"/>
             <!--<jvmarg value="-XX:+UnlockCommercialFeatures"/>-->
