--- a/pom.xml
+++ b/pom.xml
@@ -396,6 +396,16 @@
                 <artifactId>javax.servlet-api</artifactId>
                 <version>${javax.javax.servlet.api.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>${json.version}</version>
+            </dependency>
 
             <!--carbon automation framework-->
             <dependency>
@@ -683,6 +693,8 @@
         <jetty.version>9.2.7.v20150116</jetty.version>
         <javax.websocket.api.version>1.0</javax.websocket.api.version>
         <junit.version>4.10</junit.version>
+        <gson.version>2.1</gson.version>
+        <json.version>20090211</json.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.scm.id>my-scm-server</project.scm.id>
