--- a/modules/samples/consumers/pom.xml
+++ b/modules/samples/consumers/pom.xml
@@ -42,6 +42,7 @@
         <module>websocket</module>
         <module>wso2-event-performance</module>
         <module>http-performance</module>
+        <module>kafka-performance</module>
     </modules>
 
 
