--- a/modules/samples/producers/kafka-performance/build.xml
+++ b/modules/samples/producers/kafka-performance/build.xml
@@ -27,8 +27,10 @@
     <property name="password" value="admin"/>
 
     <property name="url" value=""/>
-    <property name="sn" value=""/>
-    <property name="filePath" value=""/>
+    <property name="topic" value=""/>
+    <property name="noOfEvents" value=""/>
+    <property name="elapsedCount" value=""/>
+    <property name="noOfPublishers" value=""/>
 
     <path id="javac.classpath">
         <pathelement path="${class.dir}"/>
