--- a/modules/samples/consumers/http-performance/pom.xml
+++ b/modules/samples/consumers/http-performance/pom.xml
@@ -27,13 +27,6 @@
 
     <artifactId>http-performance-server</artifactId>
 
-    <repositories>
-        <repository>
-            <id>org.wso2.carbon</id>
-            <url>http://dist.wso2.org/maven2/</url>
-        </repository>
-    </repositories>
-
     <dependencies>
         <dependency>
             <groupId>org.eclipse.equinox</groupId>
@@ -46,7 +39,10 @@
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
-            <version>0.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ws.commons.axiom.wso2</groupId>
+            <artifactId>axiom</artifactId>
         </dependency>
     </dependencies>
 
