--- a/modules/samples/producers/kafka-performance/build.xml
+++ b/modules/samples/producers/kafka-performance/build.xml
@@ -26,11 +26,11 @@
     <property name="username" value="admin"/>
     <property name="password" value="admin"/>
 
-    <property name="url" value=""/>
-    <property name="topic" value=""/>
-    <property name="noOfEvents" value=""/>
-    <property name="elapsedCount" value=""/>
-    <property name="noOfPublishers" value=""/>
+    <property name="url" value="localhost:9092"/>
+    <property name="topic" value="kafkaTopicProduce"/>
+    <property name="noOfEvents" value="20000000"/>
+    <property name="elapsedCount" value="1000000"/>
+    <property name="noOfPublishers" value="1"/>
 
     <path id="javac.classpath">
         <pathelement path="${class.dir}"/>
