--- a/modules/features/service/org.wso2.stratos.cep.dashboard.ui.feature/pom.xml
+++ b/modules/features/service/org.wso2.stratos.cep.dashboard.ui.feature/pom.xml
@@ -55,7 +55,7 @@
                         </goals>
                         <configuration>
                             <id>org.wso2.stratos.cep.dashboard.ui</id>
-                            <propertiesFile>../etc/feature.properties</propertiesFile>
+                            <propertiesFile>../feature.properties</propertiesFile>
                             <adviceFile>
                                 <properties>
                                     <propertyDef>org.wso2.carbon.p2.category.type:console</propertyDef>
