Setting compiler to modern for ant javac task so that old ant versions do not get a Java8 compatibility issue.

--- a/modules/samples/consumers/http-performance/build.xml
+++ b/modules/samples/consumers/http-performance/build.xml
@@ -74,7 +74,7 @@
     </target>
 
     <target name="compile" depends="init">
-        <javac debug="on" srcdir="${src.dir}" destdir="${class.dir}">
+        <javac debug="on" srcdir="${src.dir}" destdir="${class.dir}" compiler="modern">
             <include name="*/**"/>
             <classpath refid="javac.classpath"/>
         </javac>
