--- a/modules/samples/consumers/wso2-event-performance/build.xml
+++ b/modules/samples/consumers/wso2-event-performance/build.xml
@@ -65,7 +65,7 @@
     </target>
 
     <target name="compile" depends="init">
-        <javac srcdir="${src.dir}" destdir="${class.dir}">
+        <javac srcdir="${src.dir}" destdir="${class.dir}" compiler="modern">
             <include name="**/*"/>
             <classpath refid="javac.classpath"/>
         </javac>
