--- a/modules/samples/producers/soap/build.xml
+++ b/modules/samples/producers/soap/build.xml
@@ -68,7 +68,7 @@
     </target>
 
     <target name="compile" depends="init">
-        <javac srcdir="${src.dir}" destdir="${class.dir}">
+        <javac srcdir="${src.dir}" destdir="${class.dir}" compiler="modern">
             <include name="*/**"/>
             <classpath refid="javac.classpath"/>
         </javac>
