--- a/modules/samples/producers/soap/pom.xml
+++ b/modules/samples/producers/soap/pom.xml
@@ -35,6 +35,10 @@
             <groupId>org.apache.log4j.wso2</groupId>
             <artifactId>log4j</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.axis2.wso2</groupId>
+            <artifactId>axis2-client</artifactId>
+        </dependency>
     </dependencies>
 
 
