--- a/modules/samples/consumers/jms-performance/build.xml
+++ b/modules/samples/consumers/jms-performance/build.xml
@@ -21,13 +21,13 @@
     <property name="resources.dir" value="src/main/resources"/>
     <property name="temp.dir" value="temp"/>
     <property name="class.dir" value="${temp.dir}/classes"/>
-    <property name="main-class" value="org.wso2.carbon.sample.consumer.JMSClient"/>
+    <property name="main-class" value="org.wso2.carbon.sample.consumer.JmsMain"/>
     <property name="lib.dir" value="../../lib"/>
 
 
-    <property name="broker" value=""/>
-    <property name="topicName" value=""/>
-    <property name="queue" value=""/>
+    <property name="queueName" value=""/>
+    <property name="consumers" value=""/>
+    <property name="warmUpCount" value=""/>
 
     <path id="javac.classpath">
         <pathelement path="${class.dir}"/>
@@ -65,9 +65,9 @@
         <echo>Configure -Dbroker and (-DtopicName=xxxx or -DqueueName)</echo>
         <java classname="${main-class}"
               classpathref="javac.classpath" fork="true">
-            <arg value="${broker}"/>
-            <arg value="${topicName}"/>
-            <arg value="${queue}"/>
+            <arg value="${queueName}"/>
+            <arg value="${consumers}"/>
+            <arg value="${warmUpCount}"/>
         </java>
     </target>
 
