--- a/modules/samples/producers/jms-performance/build.xml
+++ b/modules/samples/producers/jms-performance/build.xml
@@ -25,11 +25,7 @@
     <property name="lib.dir" value="../../lib"/>
 
 
-    <property name="sn" value=""/>
     <property name="topicName" value=""/>
-    <property name="queueName" value=""/>
-    <property name="format" value=""/>
-    <property name="filePath" value=""/>
     <property name="broker" value=""/>
 
     <path id="javac.classpath">
@@ -67,14 +63,10 @@
     </target>
 
     <target name="run" depends="compile">
-        <echo>Configure -DtopicName=xxxx -Dformat=xxxx(csv, text, json, xml) -Dbroker=xxxx(activemq, mb, qpid), (-Dsn='sample number' or -DfilePath=xxxx)</echo>
+        <echo>Configure -DtopicName=xxxx -Dbroker=xxxx(activemq, mb, qpid)</echo>
         <java classname="${main-class}"
               classpathref="javac.classpath" fork="true">
-            <arg value="${sn}"/>
             <arg value="${topicName}"/>
-            <arg value="${queueName}"/>
-            <arg value="${format}"/>
-            <arg value="${filePath}"/>
             <arg value="${broker}"/>
         </java>
     </target>
