cleaning jms performance consumer and publisher

--- a/modules/samples/consumers/pom.xml
+++ b/modules/samples/consumers/pom.xml
@@ -43,6 +43,7 @@
         <module>wso2-event-performance</module>
         <module>http-performance</module>
         <module>kafka-performance</module>
+        <module>jms-performance</module>
     </modules>
 
 
