--- a/modules/samples/producers/jms-performance/pom.xml
+++ b/modules/samples/producers/jms-performance/pom.xml
@@ -24,7 +24,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jms-performance</artifactId>
+    <artifactId>jms-performance-client</artifactId>
     <name>WSO2 CEP - Publisher - JMS Performance Client</name>
 
 
@@ -34,22 +34,22 @@
             <artifactId>geronimo-jms_1.1_spec</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.wso2.andes.wso2</groupId>
-            <artifactId>andes-client</artifactId>
-            <version>0.13.wso2v3</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.wso2.andes.wso2</groupId>-->
+            <!--<artifactId>andes-client</artifactId>-->
+            <!--<version>0.13.wso2v3</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.wso2.carbon.analytics-common</groupId>
             <artifactId>org.wso2.carbon.databridge.commons</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.qpid</groupId>
-            <artifactId>qpid-client</artifactId>
-            <version>0.32</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.qpid</groupId>-->
+            <!--<artifactId>qpid-client</artifactId>-->
+            <!--<version>0.32</version>-->
+        <!--</dependency>-->
 
     </dependencies>
 
