--- a/pom.xml
+++ b/pom.xml
@@ -657,10 +657,10 @@
         <carbon.analytics-common.version>2.0.0-SNAPSHOT</carbon.analytics-common.version>
         <carbon.dashboards.version>1.0.1-SNAPSHOT</carbon.dashboards.version>
         <carbon.identity.version>4.5.4</carbon.identity.version>
-        <carbon.registry.version>4.4.4</carbon.registry.version>
+        <carbon.registry.version>4.4.5</carbon.registry.version>
         <!--<carbon.storagemgt.version>4.3.1-SNAPSHOT</carbon.storagemgt.version>-->
         <carbon.multitenancy.version>4.4.1</carbon.multitenancy.version>
-        <carbon.governance.version>4.4.1</carbon.governance.version>
+        <!--<carbon.governance.version>4.5.2</carbon.governance.version>-->
 
         <siddhi.version>3.0.0-SNAPSHOT</siddhi.version>
         <cep.version>4.0.0-SNAPSHOT</cep.version>
