--- a/modules/p2-profile-gen/pom.xml
+++ b/modules/p2-profile-gen/pom.xml
@@ -248,6 +248,11 @@
                                 <featureArtifactDef>
                                     org.wso2.cep:org.wso2.stratos.cep.dashboard.ui.feature:${cep.version}
                                 </featureArtifactDef>
+
+                                <!-- Cipher tool feature -->
+                                <featureArtifactDef>
+                                    org.wso2.ciphertool:org.wso2.ciphertool.feature:${cipher.tool.version}
+                                </featureArtifactDef>
                             </featureArtifacts>
                         </configuration>
                     </execution>
@@ -480,6 +485,11 @@
                                     <version>${cep.version}</version>
                                 </feature>
 
+                                <!-- Cipher tool feature -->
+                                <feature>
+                                    <id>org.wso2.ciphertool.feature.group</id>
+                                    <version>${cipher.tool.version}</version>
+                                </feature>
                             </features>
                         </configuration>
                     </execution>
