--- a/modules/samples/consumers/http-performance/pom.xml
+++ b/modules/samples/consumers/http-performance/pom.xml
@@ -26,6 +26,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>http-performance-server</artifactId>
+    <name>WSO2 CEP - Consumer - HTTP Performance Service</name>
 
     <dependencies>
         <dependency>
